--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -140,36 +140,50 @@
 	    <div class="row">
 	        <h3>The Network Effects Of Coming Together</h3>
 	        <p style="font-style:italic;color:gray">Consisting of thousands of companies and individuals spanning the globe.</p> 
-	        <p style="font-style:italic;color:gray">Our Shared Intelligence learns and works to create value and amass wealth.</p>
-	        <p style="font-style:italic;color:gray">This network of analysts spans the globe. A strong team.</p>
+	        <p style="font-style:italic;color:gray">Our Shared Intelligence learns and works to create value and shared wealth.</p>
+	        <p style="font-style:italic;color:gray">This network of intelligence spans the globe. A strong team.</p>
 	    </div>
 	    <div class="spacing-50"></div>
 	</div>
 	
 	<div class="container" id="about">
 
-		<div class="spacing-100"></div>
+		<div class="spacing-50"></div>
 
 		<div class="row">
 			<div class="col-sm-12">
-			    <div style="text-align:left;" id="header-text-area">
+
+
+				<div style="background:url('https://source.unsplash.com/1600x900/?finance,code')" class="imageContainerSmall">
+                    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+                        <div style="margin-top: auto;margin-bottom: auto;">
+                            <div class="container">
+                                <h1 style="text-align:left;font-size:50px;color:rgba(255,255,255,0.9);font-weight:400;">Empowered Financial Representation</h1>
+                                <h5 style="color:white;text-align:left">Backed by Sound, Open Data</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+			    <!--<div style="text-align:left;" id="header-text-area">
 			       <h2>Empowered Financial Representation</h2>
 			       <p style="color:gray;font-style:italic">Backed by Sound, Open Data</p>
-			    </div>
+			    </div>-->
 			</div>
 		</div>
 
-		<div class="spacing-100"></div>
+		<div class="spacing-50"></div>
 
 	</div>
 
 	<div class="container" style="text-align:left">
 
-		<div class="row">
+		<div class="row" style="padding:16px;">
 			<div class="col-sm-6">
 
 				<h3>We <a href="#">continually learn and grow</a>.</h3>
-				<p style="color:gray;font-style:italic">Our Community of analysts work together to support another.</p>
+				<p style="color:gray;font-style:italic">Our Community of analysts work together to support another. <!--A network of peers--></p>
 				<div class="spacing-5"></div>
 
 				<h3>Open & Shared Intelligence</h3>
