--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -26,18 +26,20 @@
     <div class="row">
         <h3>The Network Effects Of Coming Together</h3>
         <p style="font-style:italic;color:gray">Consisting of thousands of companies and individuals spanning the globe.</p> 
-        <p style="font-style:italic;color:gray">Intelligence that learns and works with you to create value and amass wealth.</p>
-        <p style="font-style:italic;color:gray">A network of analysts spanning the globe. A strong team.</p>
+        <p style="font-style:italic;color:gray">Our Shared Intelligence learns and works to create value and amass wealth.</p>
+        <p style="font-style:italic;color:gray">This network of analysts spans the globe. A strong team.</p>
     </div>
     <div class="spacing-50"></div>
 </div>
 
+
+<!--
 <div style="color:white;background-color:black">
     <div class="spacing-50"></div>
     <div class="container" style="text-align:left">
         <div class="row">
             <div class="col-sm-6">
-                <h3>Analysis at Scale</h3>
+                <h1>Analysis at Scale</h1>
                 <h5>Open Intelligence & Market Information</h5>
             </div>
             <div class="col-sm-6" style="overflow:hidden; text-align:right">
@@ -46,6 +48,18 @@
         </div>
     </div>
     <div class="spacing-50"></div>
+</div>
+-->
+
+<div style="background:url('https://source.unsplash.com/1600x900/?finance,code')" class="imageContainerSmall">
+    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+        <div style="margin-top: auto;margin-bottom: auto;">
+            <div class="container">
+                <h1 style="text-align:left;color:rgba(255,255,255,0.9);font-weight:400;">Analysis at Scale</h1>
+                <h5 style="color:white;text-align:left">Open Intelligence & Market Information</h5>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="container" style="text-align:left">
@@ -56,7 +70,7 @@
 
         <div class="col-sm-6">
             <h3>Collaboration and Contribution</h3>
-            <p style="font-style:italic;color:gray">The Ethos of CRE8 reflects collaboration. www.CRE8.xyz</p>
+            <p style="font-style:italic;color:gray">The Ethos of CRE8 reflects collaboration. <a href="https://www.cre8.xyz">CRE8.XYZ</a></p>
             <div class="spacing-5"></div>
 
             <h4>Community Analysts</h4>
@@ -80,11 +94,11 @@
             <div class="spacing-5"></div>
 
             <h4>Mapping the Market</h4>
-            <p style="font-style:italic;color:gray">Multidimensional Market Traversal facilitated through Peer-to-Peer Machine Learning</p>
+            <p style="font-style:italic;color:gray">Multidimensional Market Traversal facilitated through Peer-to-Peer Machine Learning.</p>
             <div class="spacing-5"></div>
 
             <h4>Machine Learning</h4>
-            <p style="font-style:italic;color:gray">Shared information creates intelligence</p>
+            <p style="font-style:italic;color:gray">Shared information creates intelligence.</p>
 
         </div>
 
@@ -94,24 +108,33 @@
     </div>
 
     <div class="spacing-50"></div>
-
-    <div class="row">
-
-        <div class="col-sm-6">
-            <h3>Investment Performance</h3>
-            <p style="font-style:italic;color:gray">With {memberCount} Members, {trandeCount} trades, and over {capitalAppreciation}% Capital Appreciation. We are Successful</p>
-        </div>
-
-        <div class="col-sm-6">
-        </div>
-
-    </div>
-
+    
+    <!--
     <div class="spacing-50"></div>
     <highchart config="chartConfig"></highchart>
-
     <a href="/markets" class="btn btn-default log-btn">Explore</a>
+    -->
 
 </div>
+
+<div style="background:url('https://source.unsplash.com/1600x900/?finance,code')" class="imageContainerSmall">
+    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+        <div style="margin-top: auto;margin-bottom: auto;">
+            <div class="container">
+                <h1 style="text-align:left;color:rgba(255,255,255,0.9);font-weight:400;">Investment Performance</h1>
+                <h5 style="color:white;text-align:left">With {memberCount} Members, {trandeCount} trades, and over {capitalAppreciation}% Capital Appreciation. We are Successful.</h5>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container" style="text-align:left">
+    <div class="row">
+        <div class="spacing-50"></div>
+        <highchart config="chartConfig"></highchart>
+        <a href="/markets" class="btn btn-default log-btn">Explore</a>
+    </div>
+</div>
+
 <div class="spacing-50"></div>
 <div ng-include="'register/index.tpl.html'"></div>
