--- a/.tmp/public/src/app/market/index.tpl.html
+++ b/.tmp/public/src/app/market/index.tpl.html
@@ -14,15 +14,15 @@
 
 	<div class="row">
 
-		<p class="btn btn-default" ng-click="selectTime(60000,'BTC')">1min</p>
-		<p class="btn btn-default" ng-click="selectTime(300000,'BTC')">5min</p>
-		<p class="btn btn-default" ng-click="selectTime(1800000,'BTC')">30min</p>
-		<p class="btn btn-default" ng-click="selectTime(3600000,'BTC')">1hr</p>
-		<p class="btn btn-default" ng-click="selectTime(7200000,'BTC')">2hrs</p>
-		<p class="btn btn-default" ng-click="selectTime(14400000,'BTC')">4hrs</p>
-		<p class="btn btn-default" ng-click="selectTime(21600000,'BTC')">6hrs</p>
-		<p class="btn btn-default" ng-click="selectTime(43200000,'BTC')">12hrs</p>
-		<p class="btn btn-default" ng-click="selectTime(86400000,'BTC')">24hrs</p>
+		<p class="btn btn-default" ng-click="selectTimeBad(60000,'BTC')">1min</p>
+		<p class="btn btn-default" ng-click="selectTimeBad(300000,'BTC')">5min</p>
+		<p class="btn btn-default" ng-click="selectTimeBad(1800000,'BTC')">30min</p>
+		<p class="btn btn-default" ng-click="selectTimeBad(3600000,'BTC')">1hr</p>
+		<p class="btn btn-default" ng-click="selectTimeBad(7200000,'BTC')">2hrs</p>
+		<p class="btn btn-default" ng-click="selectTimeBad(14400000,'BTC')">4hrs</p>
+		<p class="btn btn-default" ng-click="selectTimeBad(21600000,'BTC')">6hrs</p>
+		<p class="btn btn-default" ng-click="selectTimeBad(43200000,'BTC')">12hrs</p>
+		<p class="btn btn-default" ng-click="selectTimeBad(86400000,'BTC')">24hrs</p>
 		<p class="btn btn-default" ng-click="solvePortfolio('60000', 100)">Solve</p>
 		<p class="btn btn-default" ng-click="solvePortfolioMulti('60000', 100)">MultiSolve</p>
 
