--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -126,6 +126,60 @@ input:-ms-input-placeholder {
 
 .navbar-inverse{background-color:#000}
 
+.imageContainer {
+    background:#33312d;
+    overflow:hidden;
+    min-height: 500px;
+    font-family: 'Titillium Web',sans-serif;
+    margin:0;padding:0;border:0 none;position: relative;
+}
+
+.imageContainerDiv {
+    width:100%;
+    height: 35em;
+    display: flex;
+    flex-direction: column;
+}
+
+.imageContainerDiv h1 {
+    color: rgba(255,255,255,0.9);
+    font-size: 50px;
+    font-weight: 400;
+    margin-top:auto;
+    margin-bottom:auto;
+}
+
+.imageContainerSmall {
+    background:#252525;
+    overflow:hidden;
+    min-height: 200px;
+    font-family: 'Titillium Web',sans-serif;
+    margin:0;padding:0;border:0 none;position: relative;
+}
+
+.imageContainerSmallDiv {
+    width:100%;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+}
+
+.imageContainerSmallDiv h1 {
+    color: rgba(255,255,255,0.9);
+    font-size: 50px;
+    font-weight: 400;
+    margin-top:auto;
+    margin-bottom:auto;
+}
+
+.imageContainerSmallDivH1 {
+    color: rgba(255,255,255,0.9);
+    font-size: 50px;
+    font-weight: 400;
+    margin-top:auto;
+    margin-bottom:auto;
+}
+
 .selfClear:after {
   content: "";
   clear: both;
