--- a/assets/styles/css/intro.css
+++ b/assets/styles/css/intro.css
@@ -175,55 +175,6 @@ svg {
   overflow:hidden;
   z-index:-5
 }
-
-/* media queries */
-@media only screen and (max-width: 1024px) {
-  video {display:none}
-  .intro-mobile {
-    visibility:visible;
-    height:100%
-  }
-}
-
-@media only screen and (max-width: 920px) {
-  //.intro-container {zoom: 0.8}
-}
-@media only screen and (max-width: 850px) {
-  //.intro-container {zoom: 0.7}
-  //body{zoom: 1}
-}
-@media only screen and (max-width: 740px) {
-  //.intro-container {zoom: 0.6}
-  //body{zoom: 1}
-}
-@media only screen and (max-width: 640px) {
-  //.intro-container {zoom: 0.55}
-  //body{zoom: 1}
-}
-@media only screen and (max-width: 600px) {
-  //.intro-container {zoom: 0.5}
-  //body{zoom: 0.97}
-}
-@media only screen and (max-width: 555px) {
-  //.intro-container {zoom: 0.45}
-  //body{zoom: 0.94}
-}
-@media only screen and (max-width: 510px) {
-  //.intro-container {zoom: 0.4}
-  //body{zoom: 0.91}
-}
-@media only screen and (max-width: 460px) {
-  //.intro-container {zoom: 0.35}
-  //body{zoom: 0.88}
-  .main-container{zoom:0.88;}
-}
-@media only screen and (max-width: 410px) {
-  //.intro-container {zoom: 0.325}
-  //.intro-container {zoom: 0.55}
-  .main-container{zoom:0.75;}
-}
-
-@media only screen and (max-width: 788px) {
-  .desktop {visibility:hidden}
-  .mobile {visibility:visible}
+.intro-desktop-text{
+  zoom:.1;
 }
