--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -116,8 +116,8 @@
 	    <div class="intro-container">
 	        <svg class="svg-defs" viewBox="0 0 1920 1080" viewPort="0 0 1920 1080" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg">
 	            <symbol id="intro-desktop-text">
-	                <text style="font-size:108px;" text-anchor="middle" x="960" y="488" dy=".35em" class="medium-text">CRE8.CAPITAL</text> 
-	                <text style="font-size:28px;" text-anchor="middle" x="960" y="570" dy=".35em" class="medium-text">MULTIDIMENSIONAL CAPITAL PARTNERS</text> 
+	                <text style="font-size:62px;font-family:Titillium Web,Helvetica,Arial,sans-serif;" text-anchor="middle" x="960" y="488" dy=".35em" class="medium-text">CRE8.CAPITAL</text> 
+	                <text style="font-size:22px;" text-anchor="middle" x="960" y="570" dy=".35em" class="medium-text">MULTIDIMENSIONAL CAPITAL PARTNERS</text> 
 	            </symbol>  
 	            <div class="intro-shade"></div>  
 	        </svg> 
@@ -154,7 +154,7 @@
                     <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
                         <div style="margin-top: auto;margin-bottom: auto;">
                             <div class="container">
-                                <h1 style="text-align:left;font-size:50px;color:rgba(255,255,255,0.9);font-weight:400;">Empowered Financial Representation</h1>
+                                <h1 style="text-align:left;font-size:35px;color:rgba(255,255,255,0.9);font-weight:400;">Empowered Financial Representation</h1>
                                 <h5 style="color:white;text-align:left">Backed by Sound, Open Data</h5>
                             </div>
                         </div>
@@ -180,7 +180,7 @@
 
 				<h3>Transparent Results</h3>
 				<p style="color:gray;font-style:italic">Always backed with hard-data.</p>
-				<div class="spacing-5"></div>
+				<div class="spacing-50"></div>
 
 			</div>
 			<div class="col-sm-6" style="text-align:right">
@@ -207,15 +207,15 @@
 			</div>
 		</div>
 
-		<div class="spacing-100"></div>
+		<div class="spacing-50"></div>
 
 		<div class="row">
-			<div class="col-sm-4">
-				<!--<img src="images/tesseract-bg.png">-->
+			<div class="col-sm-5" style="text-align:center">
 				<img style="max-height:300px;" src="images/1.gif">
+				<div class="spacing-50"></div>
 			</div>
 
-			<div class="col-sm-8" style="">
+			<div class="col-sm-7" style="">
 
 				<h3>Collaboration and Contribution</h3>
 				<!-- and analytic insight ? -->
@@ -228,7 +228,7 @@
 				<p style="color:gray;font-style:italic">Creating Computational Intelligence Designed to Normalize Risk and Equalize Investment Returns.</p>
 
 				<div class="spacing-10"></div>
-				<a href="/about" class="btn btn-default log-btn">Learn More</a>
+				<!--<a href="/about" class="btn btn-default log-btn">Learn More</a>-->
 
 			</div>
 
@@ -238,15 +238,11 @@
 
 	</div>
 
-	<div ng-show="false" style="text-align:left;color:gray;background-color:black;">
+	<div style="text-align:left;color:gray;background-color:black;">
 		<div class="spacing-50"></div>
-
 		<div class="container">
-			<h2>Activity</h2>
-			<div class="spacing-10"></div>
-			<highchart config="chartConfig"></highchart><!--daily return vs index..-->
+			<highchart config="chartConfig"></highchart>
 		</div>
-
 		<div class="spacing-50"></div>
 	</div>
 
@@ -257,7 +253,7 @@
             <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
                 <div style="margin-top: auto;margin-bottom: auto;">
                     <div class="container">
-                        <h1 style="text-align:left;font-size:50px;color:rgba(255,255,255,0.9);font-weight:400;">Transparent Orders</h1>
+                        <h1 style="text-align:left;font-size:35px;color:rgba(255,255,255,0.9);font-weight:400;">Transparent Orders</h1>
                         <h5 style="color:white;text-align:left">Accountability in Investment</h5>
                     </div>
                 </div>
