--- a/.tmp/public/src/app/footer/index.tpl.html
+++ b/.tmp/public/src/app/footer/index.tpl.html
@@ -1,8 +1,12 @@
 <div class="footer" ng-controller="FooterCtrl">
 
-	{{date | date:'yyyy'}} <a href="/">collaborative.capital</a>
-	<a href="/about">about</a>
+	{{date | date:'yyyy'}} <a style="color:gray" href="/">collaborative.capital</a>
+	<br>
+	<!--<a href="/about">about</a>
 	<a href="#">terms</a>
+	<br>-->
+	<span style="font-size:10px"><a style="color:gray" href="https://www.cre8.xyz/project/cre8capital">a CRE8 project</a></span>
+	<br>
 	<a href="https://www.instagram.com/cre8capital"><i class="fa fa-instagram"></i></a>
 	<a href="https://www.twitter.com/cre8capital"><i class="fa fa-twitter"></i></a>
 </div>
