--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -4,7 +4,7 @@
 	    <div class="spacing-25"></div>
 	    <div class="container">
 	        <div class="row">
-	            <h1 ng-click="subNavToggle()" style="text-transform:uppercase"><i style="font-size:30px" class="fa fa-bars"></i> Dashboard</h1>
+	            <h1 style="text-transform:uppercase"><i style="font-size:30px" class="fa fa-bars"></i> Dashboard</h1>
 	        </div>
 	    </div>
 	    <div class="spacing-25"></div>
@@ -139,7 +139,7 @@
 	    <div class="spacing-50"></div>
 	    <div class="row">
 	        <h3>The Network Effects Of Coming Together</h3>
-	        <p style="font-style:italic;color:gray">Our Shared Intelligence continually creates value.</p>
+	        <p style="font-style:italic;color:gray">Our Shared Intelligence Creates Value.</p>
 	       	<!--<p style="font-style:italic;color:gray">Always growing and learning, CRE8 consists of a companies and individuals spanning the globe.</p>-->
 	        <!--<p style="font-style:italic;color:gray">This network of intelligence spans the globe. A strong team.</p>-->
 	    </div>
@@ -179,7 +179,7 @@
 				<div class="spacing-5"></div>
 
 				<h3>Transparent Results</h3>
-				<p style="color:gray;font-style:italic">Always backed with hard-data.</p>
+				<p style="color:gray;font-style:italic">Always backed by hard-data.</p>
 				<div class="spacing-50"></div>
 
 			</div>
@@ -234,9 +234,21 @@
 
 		</div>
 
-		<div class="spacing-100"></div>
+	    <div class="spacing-50"></div>
 
 	</div>
+
+	<div class="container">
+	    <div class="spacing-50"></div>
+	    <div class="row">
+	        <h3>A Transparent Paradigm</h3>
+	        <p style="font-style:italic;color:gray">With nothing to to hide, we have everything to gain.</p>
+	        <p style="font-style:italic;color:gray">Our performance defines us.</p>
+	    </div>
+	    <div class="spacing-50"></div>
+	</div>
+
+    <div class="spacing-50"></div>
 
 	<div style="text-align:left;color:gray;background-color:black;">
 		<div class="spacing-50"></div>
@@ -247,9 +259,10 @@
 	</div>
 
 	<div style="text-align:left;" class="container">
+
 		<div class="spacing-50"></div>
 
-		<div style="background:url('https://source.unsplash.com/1600x900/?finance,code,data,analysis,forex')" class="imageContainerSmall">
+		<div style="background:url('https://source.unsplash.com/1600x900/?finance,code,data,forex')" class="imageContainerSmall">
             <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
                 <div style="margin-top: auto;margin-bottom: auto;">
                     <div class="container">
