--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -132,7 +132,7 @@
     <div class="row">
         <div class="spacing-50"></div>
         <highchart config="chartConfig"></highchart>
-        <a href="/markets" class="btn btn-default log-btn">Explore</a>
+        <a href="/markets" ui-sref="markets" class="btn btn-default log-btn">Explore</a>
     </div>
 </div>
 
