--- a/assets/src/app/login/index.tpl.html
+++ b/assets/src/app/login/index.tpl.html
@@ -34,4 +34,6 @@
         </div>
     </div>
 </div>
+<div class="spacing-25"></div>
 <div ng-include="'footer/index.tpl.html'"></div>
+<div class="spacing-25"></div>
