--- a/assets/src/app/market/index.tpl.html
+++ b/assets/src/app/market/index.tpl.html
@@ -1,114 +1,245 @@
-<div style="background-color:black;color:white;text-align:left">
-
-    <div class="spacing-25"></div>
-    <div class="container">
-    	<div class="row"><h1 ng-click="marketsToggle()"><i style="font-size:30px" class="fa fa-bars"></i> {{market}}</h1></div>
+<div class="container" style="padding:0px">
+    <div class="card" ng-click="marketsToggle()">
+        <div class="row" style="margin:0px">
+            <div ng-class="{'col-sm-9 col-xs-8': markers.length > 0}" class="imageContainerSmall" style="background:url('https://source.unsplash.com/1600x900/?finance,code,{{market}}');">
+                <div style="background:rgba(0,0,0,0.75);" class="imageContainerSmallDiv">  
+                    <div style="margin-top: auto;margin-bottom: auto;">
+                        <div style="padding:15px">
+                            <h1 style="text-align:left;">
+                            	<!--<img style="height:50px;width:50px;border-radius:100%" ng-src="https://raw.githubusercontent.com/dziungles/cryptocurrency-logos/master/coins/32x32/bitcoin.png"/>-->
+                                {{market}}
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div style="background-color:white">
+            <div class="member-tab-container container" style="padding-left:0px">
+                <div style="text-align:left">
+                    <ul style="padding:0px;" class="member-tabs subNav">
+                        <li><a ng-click="$event.stopPropagation();selectTab('INFORMATION')">Information</a></li>
+                        <li><a ng-click="$event.stopPropagation();selectTab('INFORMATION')"><!--<i class="fa fa-exchange"></i>--> Markets</a></li>
+                        <li><a ng-click="$event.stopPropagation();selectTab('ANALYSIS')"><!--i class="fas fa-project-diagram"></i>--> Analysis</a></li>
+                        <li><a ng-click="$event.stopPropagation();selectTab('POSITIONS')">Positions</a></li>
+                        <li style="float:right;margin-top:0px"><a style="color:black"><i class="fa fa-bars"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="spacing-25"></div>
-    
 </div>
+
 
 <div class="spacing-15"></div>
 
 <div class="container" style="text-align:left">
 
-	<div class="row">
-
-		<p class="btn btn-default" ng-click="selectTimeBad(60000,'BTC')">1min</p>
-		<p class="btn btn-default" ng-click="selectTimeBad(300000,'BTC')">5min</p>
-		<p class="btn btn-default" ng-click="selectTimeBad(1800000,'BTC')">30min</p>
-		<p class="btn btn-default" ng-click="selectTimeBad(3600000,'BTC')">1hr</p>
-		<p class="btn btn-default" ng-click="selectTimeBad(7200000,'BTC')">2hrs</p>
-		<p class="btn btn-default" ng-click="selectTimeBad(14400000,'BTC')">4hrs</p>
-		<p class="btn btn-default" ng-click="selectTimeBad(21600000,'BTC')">6hrs</p>
-		<p class="btn btn-default" ng-click="selectTimeBad(43200000,'BTC')">12hrs</p>
-		<p class="btn btn-default" ng-click="selectTimeBad(86400000,'BTC')">24hrs</p>
-		<p class="btn btn-default" ng-click="solvePortfolio('60000', 100)">Solve</p>
-		<p class="btn btn-default" ng-click="solvePortfolioMulti('60000', 100)">MultiSolve</p>
-
+	<div class="row" ng-if="selectedTab=='INFORMATION'">
+		<div class="card">
+			<div style="padding:16px">
+				<h1>{{market}} Information</h1>
+				<h5>{{vector.data.length}}</h5>
+			</div>
+		</div>
 	</div>
 
-	<div class="spacing-10"></div>
-	<hr>
+	<div class="row" ng-if="selectedTab=='ANALYSIS'">
+		
 
-	<div class="row">
-		<highchart config="chart"></highchart>
-	</div>
+		<div class="card">
 
-	<div class="spacing-10"></div>
+			<div style="background:url('https://source.unsplash.com/1600x900/?value,math,graph,{{market}}');overflow:visible" class="imageContainerSmall">
+			    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+			        <div style="margin-top: auto;margin-bottom: auto;">
+			        	<div style="padding:15px">
+							<h1>Market Graph</h1>				
+			        	</div>
+			        </div>
+			    </div>
+			</div>
 
-	<div class="row">
+			<div style="padding:16px">
 
-		<h3>Value Vector</h3>
-		<!--SEARCH-->
-		<table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                	<th>Asset</th>
-                	<th>Value</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="asset in vector.data" ng-if="asset.data != '--'">
-                    <td><a href="market/{{market}}/{{asset.name}}">{{asset.name}}</a></td>
-					<td>{{asset.data}}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+				<div class="spacing-5"></div>
 
-	<div class="spacing-10"></div>
+				<div class="">
+					<p class="btn btn-default" ng-click="selectTimeBad(60000,'BTC')">1min</p>
+					<p class="btn btn-default" ng-click="selectTimeBad(300000,'BTC')">5min</p>
+					<p class="btn btn-default" ng-click="selectTimeBad(1800000,'BTC')">30min</p>
+					<p class="btn btn-default" ng-click="selectTimeBad(3600000,'BTC')">1hr</p>
+					<p class="btn btn-default" ng-click="selectTimeBad(7200000,'BTC')">2hrs</p>
+					<p class="btn btn-default" ng-click="selectTimeBad(14400000,'BTC')">4hrs</p>
+					<p class="btn btn-default" ng-click="selectTimeBad(21600000,'BTC')">6hrs</p>
+					<p class="btn btn-default" ng-click="selectTimeBad(43200000,'BTC')">12hrs</p>
+					<p class="btn btn-default" ng-click="selectTimeBad(86400000,'BTC')">24hrs</p>
+				</div>
 
-	<div class="row">
+				<div class="spacing-5"></div>
+				<hr>
 
-		<h3>Value Matrix</h3>
-		<!--SELECTED SET-->
-		<div style="overflow:scroll">
-			<table class="table table-striped table-hover">
-	            <thead>
-	                <tr>
-	                	<th></th>
-	                	<th ng-repeat="vector in matrix">
-	                		<a href="market/{{vector.name}}">{{vector.name}}</a>
-	                	</th>
-	                </tr>
-	            </thead>
-	            <tbody>
-	                <tr ng-repeat="vector in matrix">
-	                	<td><b><a href="market/{{vector.name}}">{{vector.name}}</a></b></td>
-						<td style="max-width:50px;overflow:scroll" ng-repeat="asset in vector.data"><a href="market/{{vector.name}}/{{asset.name}}">{{asset.data}}</a></td>
-	                </tr>
-	            </tbody>
-	        </table>
+				<highchart config="chart"></highchart>
+			</div>
+
+		</div>
+
+		<div class="spacing-10"></div>
+
+		<div class="card">
+
+			<div style="background:url('https://source.unsplash.com/1600x900/?value,math,vector');overflow:visible" class="imageContainerSmall">
+			    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+			        <div style="margin-top: auto;margin-bottom: auto;">
+			        	<div style="padding:15px">
+							<h1>Value Vector</h1>				
+			        	</div>
+			        </div>
+			    </div>
+			</div>
+
+			<div style="padding:16px">
+				<table class="table table-striped table-hover">
+		            <thead>
+		                <tr>
+		                	<th>Asset</th>
+		                	<th>Value</th>
+		                </tr>
+		            </thead>
+		            <tbody>
+		                <tr ng-repeat="asset in vector.data" ng-if="asset.data != '--'">
+		                    <td><a href="market/{{market}}/{{asset.name}}">{{asset.name}}</a></td>
+							<td>{{asset.data}}</td>
+		                </tr>
+		            </tbody>
+		        </table>
+		    </div>
 	    </div>
 
-		<!--MULT BY PORTFOLIO VECTOR-->
+		<div class="spacing-10"></div>
 
+		<div class="card">
+			<div style="background:url('https://source.unsplash.com/1600x900/?value,math,matrix,{{market}},code');overflow:visible" class="imageContainerSmall">
+			    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+			        <div style="margin-top: auto;margin-bottom: auto;">
+			        	<div style="padding:15px">
+							<h1>Value Matrix</h1>				
+			        	</div>
+			        </div>
+			    </div>
+			</div>
+
+			<div style="padding:16px">
+				<div style="overflow:scroll">
+					<table class="table table-striped table-hover">
+			            <thead>
+			                <tr>
+			                	<th></th>
+			                	<th ng-repeat="vector in matrix">
+			                		<a href="market/{{vector.name}}">{{vector.name}}</a>
+			                	</th>
+			                </tr>
+			            </thead>
+			            <tbody>
+			                <tr ng-repeat="vector in matrix">
+			                	<td><b><a href="market/{{vector.name}}">{{vector.name}}</a></b></td>
+								<td style="max-width:50px;overflow:scroll" ng-repeat="asset in vector.data"><a href="market/{{vector.name}}/{{asset.name}}">{{asset.data}}</a></td>
+			                </tr>
+			            </tbody>
+			        </table>
+			    </div>
+			</div>
+			<!--MULT BY PORTFOLIO VECTOR-->
+		</div>
+
+	    <div class="spacing-10"></div>
+
+	    <div class="card">
+
+	    	<div style="background:url('https://source.unsplash.com/1600x900/?value,math,matrix,{{market}},code,tensor,algebra,chalkboard');overflow:visible" class="imageContainerSmall">
+			    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+			        <div style="margin-top: auto;margin-bottom: auto;">
+			        	<div style="padding:15px">
+							<h1>Order Book Tensor</h1>				
+			        	</div>
+			        </div>
+			    </div>
+			</div>
+
+			<div style="padding:16px">
+
+		        <!--SELECTED SET & EXCHANGE-->
+		        <div style="overflow:scroll">
+					<table class="table table-striped table-hover">
+			            <thead>
+			                <tr>
+			                	<th ng-repeat="vector in matrix"><a href="market/{{vector.name}}">{{vector.name}}</a></th>
+			                </tr>
+			            </thead>
+			            <tbody>
+			                <tr ng-repeat="vector in matrix">
+								<td style="max-width:50px;overflow:scroll" ng-repeat="asset in vector.data">
+									<a ng-if="asset.data != '--' && asset.data != 1" href="market/{{vector.name}}/{{asset.name}}">[[{{asset.data}}], [{{asset.data}}]]</a>
+									<a ng-if="asset.data == '--' || asset.data == 1">{{asset.data}}</a>
+								</td>
+			                </tr>
+			            </tbody>
+			        </table>
+		       	</div>
+			</div>
+
+		</div>
 	</div>
 
-    <div class="spacing-10"></div>
+	<div class="row" ng-if="selectedTab=='POSITIONS'">
 
-    <div class="row">
+		<!--
+		<div class="card">
+			<div style="background:url('https://source.unsplash.com/1600x900/?value,math,matrix,{{market}},code,tensor,algebra,chalkboard,portfolio');overflow:visible" class="imageContainerSmall">
+			    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+			        <div style="margin-top: auto;margin-bottom: auto;">
+			        	<div style="padding:15px">
+							<h1>{{market}} portfolio</h1>				
+			        	</div>
+			        </div>
+			    </div>
+			</div>
+			<div style="padding:16px">
+			</div>
+		</div>
+		-->
 
-        <h3>Order Book Tensor</h3>
-        <!--SELECTED SET & EXCHANGE-->
-        <div style="overflow:scroll">
-			<table class="table table-striped table-hover">
-	            <thead>
-	                <tr>
-	                	<th ng-repeat="vector in matrix"><a href="market/{{vector.name}}">{{vector.name}}</a></th>
-	                </tr>
-	            </thead>
-	            <tbody>
-	                <tr ng-repeat="vector in matrix">
-						<td style="max-width:50px;overflow:scroll" ng-repeat="asset in vector.data">
-							<a ng-if="asset.data != '--' && asset.data != 1" href="market/{{vector.name}}/{{asset.name}}">[[{{asset.data}}], [{{asset.data}}]]</a>
-							<a ng-if="asset.data == '--' || asset.data == 1">{{asset.data}}</a>
-						</td>
-	                </tr>
-	            </tbody>
-	        </table>
-       	</div>
+		<div class="card">
+			<div style="background:url('https://source.unsplash.com/1600x900/?value,math,matrix,{{market}},code,tensor,algebra,chalkboard');overflow:visible" class="imageContainerSmall">
+			    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+			        <div style="margin-top: auto;margin-bottom: auto;">
+			        	<div style="padding:15px">
+							<h1>Market Orders</h1>				
+			        	</div>
+			        </div>
+			    </div>
+			</div>
+
+			<div style="padding:16px">
+				<table class="table table-inverse table-hover">
+				    <thead>
+						<tr>
+							<th>Type</th>
+							<th></th>
+							<th></th>
+							<th>Date</th>
+						</tr>
+				    </thead>
+				    <tbody>
+						<tr ng-repeat="order in orders">
+							<td>{{order.type}}</td>
+							<td>{{order.amount}} {{order.asset2}}</td>
+							<td>{{order.price}} {{order.asset1}}</td>
+							<td>{{order.createdAt | date :  "y MM-dd hh:mm.ss a"}}</td>
+						</tr>
+				    </tbody>
+				</table>
+			</div>
+		</div>
 
 	</div>
 
