--- a/assets/src/app/markets/index.tpl.html
+++ b/assets/src/app/markets/index.tpl.html
@@ -1,23 +1,19 @@
-<div style="background-color:black;color:white;text-align:left">
-
-    <div class="spacing-25"></div>
-    <div class="container">
-    	<div class="row"><h1 ng-click="marketsToggle()"><i style="font-size:30px" class="fa fa-bars"></i> Explore</h1></div>
+<div style="background:url('https://source.unsplash.com/1600x900/?value,math,matrix,code,tensor,algebra,chalkboard,portfolio,data');overflow:visible" class="imageContainerSmall">
+    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+        <div style="margin-top: auto;margin-bottom: auto;">
+        	<div class="container">
+				<h1>Explore</h1>				
+        	</div>
+        </div>
     </div>
-    <div class="spacing-25"></div>
-    
 </div>
 
 <div class="spacing-15"></div>
 
-<div class="container" style="text-align:left">
+<div class="container">
 
+	<!--
 	<div class="row">
-
-		<!--BTC VALUE VECTOR OVER TIME-->
-		<!--TODO: MORE EXCHANGES; PAIRS-->
-		<!--<highchart config="chartConfig"></highchart>-->
-
 		<p class="btn btn-default" ng-click="selectTime(60000,'BTC')">1min</p>
 		<p class="btn btn-default" ng-click="selectTime(300000,'BTC')">5min</p>
 		<p class="btn btn-default" ng-click="selectTime(1800000,'BTC')">30min</p>
@@ -27,16 +23,20 @@
 		<p class="btn btn-default" ng-click="selectTime(21600000,'BTC')">6hrs</p>
 		<p class="btn btn-default" ng-click="selectTime(43200000,'BTC')">12hrs</p>
 		<p class="btn btn-default" ng-click="selectTime(86400000,'BTC')">24hrs</p>
-		<p class="btn btn-default" ng-click="solvePortfolio('60000', 100)">Solve</p>
-		<p class="btn btn-default" ng-click="solvePortfolioMulti('60000', 100)">MultiSolve</p>
-		<!--<p class="btn btn-default" ng-click="solvePortfolioPDF('60000', 100)">MultiSolvePDF</p>-->
-
 	</div>
 
-	<div class="row" ng-show="portfolioData.orderSet.length > 0">
+	<div class="spacing-15"></div>
 
+	<div class="row">
+		<p class="btn btn-default" ng-click="solvePortfolio('60000', 100)">Solve</p>
+		<p class="btn btn-default" ng-click="solvePortfolioMulti('60000', 100)">MultiSolve</p>
+	</div>
+
+	<div class="spacing-15"></div>
+	-->
+
+	<div class="row" ng-show="portfolioData.orderSet.length > 0" style="text-align:left">
 		<div class="spacing-15"></div>
-		
 		<!--
 		<h3>Portfolio Set Over Time</h3>
 		<div class="col-md-6">
@@ -46,7 +46,6 @@
 			</div>
 		</div>
 		-->
-
 		<h3>Order Set</h3>
 		<div ng-repeat="order in portfolioData.orderSet">
 			<div class="col-md-3 col-sm-4 col-xs-6 ">
@@ -57,128 +56,131 @@
 				</div>
 			</div>
 		</div>
-
 		<div class="spacing-15"></div>
-
 	</div>
 
 	<div class="row">
+		<div class="col-sm-4 col-xs-6" ng-repeat="market in uniqueMarkets">
+			<div class="card">
+				<div style="padding:16px">
+					<h3><a href="/market/{{market}}" ui-sref="market({path:market})">{{market}}</a></h3>
+				</div>
+			</div>
+		</div>
+	</div>
 
-		<!--<h3>Value Vectors</h3>-->
-		<!--SEARCH-->
+	<div class="spacing-15"></div>
+
+	<div class="row" style="text-align:left">
+
+
+		<div class="card">
+			<div style="background:url('https://source.unsplash.com/1600x900/?value,math,matrix,{{market}},code');overflow:visible" class="imageContainerSmall">
+			    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+			        <div style="margin-top: auto;margin-bottom: auto;">
+			        	<div style="padding:15px">
+							<h1>Value Matrix</h1>				
+			        	</div>
+			        </div>
+			    </div>
+			</div>
+			<div style="spacing:16px">
+				<div style="overflow:scroll">
+					<table class="table table-striped table-hover">
+			            <thead>
+			                <tr>
+			                	<th></th>
+			                	<th ng-repeat="vector in matrix">
+			                		<a href="market/{{vector.name}}" ui-sref="market({path:vector.name})">{{vector.name}}</a>
+			                	</th>
+			                </tr>
+			            </thead>
+			            <tbody>
+			                <tr ng-repeat="vector in matrix">
+			                	<td><b><a href="market/{{vector.name}}" ui-sref="market({path:vector.name})">{{vector.name}}</a></b></td>
+								<td style="max-width:50px;overflow:scroll" ng-repeat="asset in vector.data"><a href="market/{{vector.name}}/{{asset.name}}" ui-sref="marketPair({path1:vector.name, path:asset.name})">{{asset.data}}</a></td>
+			                </tr>
+			            </tbody>
+			        </table>
+			    </div>
+			</div>
+		</div>
+
 		<!--
-		<table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                	<th>Asset</th>
-                	<th>Value</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="asset in vector.data">
-                    <td><a href="market/{{asset}}">{{asset.name}}</a></td>
-					<td>{{asset.data}}</td>
-                </tr>
-            </tbody>
-        </table>
-    	-->
-	</div>
+		<div class="card">
+	    	<div style="background:url('https://source.unsplash.com/1600x900/?value,math,matrix,{{market}},code,tensor,algebra,chalkboard');overflow:visible" class="imageContainerSmall">
+			    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+			        <div style="margin-top: auto;margin-bottom: auto;">
+			        	<div style="padding:15px">
+							<h1>Order Book Tensor</h1>				
+			        	</div>
+			        </div>
+			    </div>
+			</div>
+			<div style="spacing:16px">
+		        <div style="overflow:scroll">
+					<table class="table table-striped table-hover">
+			            <thead>
+			                <tr>
+			                	<th ng-repeat="vector in matrix"><a href="market/{{vector.name}}">{{vector.name}}</a></th>
+			                </tr>
+			            </thead>
+			            <tbody>
+			                <tr ng-repeat="vector in matrix">
+								<td style="max-width:50px;overflow:scroll" ng-repeat="asset in vector.data">
+									<a ng-if="asset.data != '--' && asset.data != 1" href="market/{{vector.name}}/{{asset.name}}">[[{{asset.data}}], [{{asset.data}}]]</a>
+									<a ng-if="asset.data == '--' || asset.data == 1">{{asset.data}}</a>
+								</td>
+			                </tr>
+			            </tbody>
+			        </table>
+		       	</div>
+			</div>
+		</div>
+		-->
 
-	<div class="spacing-15"></div>
-
-	<div class="row">
-
-		<h3>Value Matrix</h3>
-		<!--SELECTED SET-->
-		<div style="overflow:scroll">
-			<table class="table table-striped table-hover">
-	            <thead>
-	                <tr>
-	                	<th></th>
-	                	<th ng-repeat="vector in matrix">
-	                		<a href="market/{{vector.name}}">{{vector.name}}</a>
-	                	</th>
-	                </tr>
-	            </thead>
-	            <tbody>
-	                <tr ng-repeat="vector in matrix">
-	                	<td><b><a href="market/{{vector.name}}">{{vector.name}}</a></b></td>
-						<td style="max-width:50px;overflow:scroll" ng-repeat="asset in vector.data"><a href="market/{{vector.name}}/{{asset.name}}">{{asset.data}}</a></td>
-	                </tr>
-	            </tbody>
-	        </table>
+		<!--TODO-->
+		<!--
+	    <div class="card">
+	        <div style="background:url('https://source.unsplash.com/1600x900/?value,math,matrix,{{market}},code,tensor,algebra,chalkboard');overflow:visible" class="imageContainerSmall">
+			    <div style="background:rgba(0,0,0,0.75)" class="imageContainerSmallDiv">  
+			        <div style="margin-top: auto;margin-bottom: auto;">
+			        	<div style="padding:15px">
+							<h1>Market Image</h1>				
+			        	</div>
+			        </div>
+			    </div>
+			</div>
+			<div style="spacing:16px">
+		        <div style="overflow:scroll">
+					<table class="table table-striped table-hover">
+			            <thead>
+			                <tr>
+								<th></th>
+			                	<th ng-repeat="vector in marketImage"><a href="market/{{vector.name}}">{{vector.name}}</a></th>
+			                </tr>
+			            </thead>
+			            <tbody>
+			                <tr style="max-height:50px;overflow:scroll" ng-repeat="vector in marketImage">
+								<td><b><a href="market/{{vector.name}}">{{vector.name}}</a></b></td>
+								<td style="max-width:50px;overflow:scroll;max-height:50px;" ng-repeat="asset in vector.data">
+									<a ng-if="vector.name == asset.name">1</a>
+									<a ng-if="vector.name != asset.name && !asset.orderBooks[0].name" href="market/{{vector.name}}/{{asset.name}}">CIRCUIT<a>
+									<a ng-if="vector.name != asset.name && asset.orderBooks[0].name" href="market/{{vector.name}}/{{asset.name}}">TENSOR</a>
+								</td>
+			                </tr>
+			            </tbody>
+			        </table>
+		       	</div>
+	       	</div>
 	    </div>
+		-->
 
-        <!--MULT BY PORTFOLIO VECTOR-->
-
-	</div>
-
-	<div class="spacing-15"></div>
-
-	<!--
-	<div class="row">
-        <h3>Order Book Tensor</h3>
-        <div style="overflow:scroll">
-			<table class="table table-striped table-hover">
-	            <thead>
-	                <tr>
-						<th></th>
-	                	<th ng-repeat="vector in matrix"><a href="market/{{vector.name}}">{{vector.name}}</a></th>
-	                </tr>
-	            </thead>
-	            <tbody>
-	                <tr ng-repeat="vector in matrix">
-						<td><b><a href="market/{{vector.name}}">{{vector.name}}</a></b></td>
-						<td style="max-width:50px;overflow:scroll" ng-repeat="asset in vector.data">
-							<a ng-if="asset.data != '--' && asset.data != 1" href="market/{{vector.name}}/{{asset.name}}">[[{{asset.data}}], [{{asset.data}}]]</a>
-							<a ng-if="asset.data == '--' || asset.data == 1">{{asset.data}}</a>
-						</td>
-	                </tr>
-	            </tbody>
-	        </table>
-       	</div>
-    </div>
-	-->
-
-    <div class="row">
-
-        <h3>Market Image</h3>
-        <!--SELECTED SET & EXCHANGE-->
-        <div style="overflow:scroll">
-			<table class="table table-striped table-hover">
-	            <thead>
-	                <tr>
-						<th></th>
-	                	<th ng-repeat="vector in marketImage"><a href="market/{{vector.name}}">{{vector.name}}</a></th>
-	                </tr>
-	            </thead>
-	            <tbody>
-	                <tr style="max-height:50px;overflow:scroll" ng-repeat="vector in marketImage">
-						<td><b><a href="market/{{vector.name}}">{{vector.name}}</a></b></td>
-						<td style="max-width:50px;overflow:scroll;max-height:50px;" ng-repeat="asset in vector.data">
-							<a ng-if="vector.name == asset.name">1</a>
-							<a ng-if="vector.name != asset.name && !asset.orderBooks[0].name" href="market/{{vector.name}}/{{asset.name}}">CIRCUIT<a>
-							<a ng-if="vector.name != asset.name && asset.orderBooks[0].name" href="market/{{vector.name}}/{{asset.name}}">TENSOR</a>
-						</td>
-	                </tr>
-	            </tbody>
-	        </table>
-       	</div>
-
-    </div>
-
-
-    <div class="spacing-15"></div>
- 	
-	<div ng-show="false" class="row">
-
-        <h3>Neural Networks</h3>
-        
 	</div>
 
 </div>
 
-<div class="spacing-50"></div>
 
+<div class="spacing-25"></div>
 <div ng-include="'footer/index.tpl.html'"></div>
-
+<div class="spacing-25"></div>
