--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,7 +18,11 @@
         <!--FAVICONS END-->
 
         <!--STYLES-->
-        <link rel="stylesheet" href="/min/production.min.css">
+        <link rel="stylesheet" href="/styles/css/bootstrap.css">
+        <link rel="stylesheet" href="/styles/css/intro.css">
+        <link rel="stylesheet" href="/styles/css/theme.css">
+        <link rel="stylesheet" href="/bower_components/highcharts-ng/dist/highcharts-ng.css">
+        <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
         <!--STYLES END-->
 
         <!--FONTS-->
@@ -54,7 +58,59 @@
         <%- body %>
 
         <!--SCRIPTS-->
-        <script src="/min/production.min.js"></script>
+        <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="/bower_components/angular/angular.js"></script>
+        <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+        <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="/bower_components/sails.io.js/dist/sails.io.js"></script>
+        <script src="/bower_components/angularSails/dist/ngsails.io.js"></script>
+        <script src="/bower_components/lodash/lodash.js"></script>
+        <script src="/bower_components/moment/moment.js"></script>
+        <script src="/bower_components/angular-moment/angular-moment.js"></script>
+        <script src="/bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+        <script src="/bower_components/angular-scroll/angular-scroll.js"></script>
+        <script src="/bower_components/d3/d3.js"></script>
+        <script src="/bower_components/nvd3/build/nv.d3.js"></script>
+        <script src="/bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+        <script src="/bower_components/Chart.js/Chart.min.js"></script>
+        <script src="/bower_components/angular-chart.js/dist/angular-chart.js"></script>
+        <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
+        <script src="/bower_components/angular-aria/angular-aria.min.js"></script>
+        <script src="/bower_components/angular-material/angular-material.js"></script>
+        <script src="/bower_components/Chart.HeatMap/dst/Chart.HeatMap.S.js"></script>
+        <script src="/bower_components/highcharts/highstock.js"></script>
+        <script src="/bower_components/highcharts/modules/heatmap.js"></script>
+        <script src="/bower_components/highcharts/highcharts-more.js"></script>
+        <script src="/bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
+        <script src="/src/app/about/index.js"></script>
+        <script src="/src/app/account/index.js"></script>
+        <script src="/src/app/app.js"></script>
+        <script src="/src/app/footer/index.js"></script>
+        <script src="/src/app/home/index.js"></script>
+        <script src="/src/app/login/index.js"></script>
+        <script src="/src/app/market/index.js"></script>
+        <script src="/src/app/marketPair/index.js"></script>
+        <script src="/src/app/markets/index.js"></script>
+        <script src="/src/app/member/index.js"></script>
+        <script src="/src/app/nav/index.js"></script>
+        <script src="/src/app/register/index.js"></script>
+        <script src="/src/app/search/index.js"></script>
+        <script src="/src/common/models/analysis.js"></script>
+        <script src="/src/common/models/data.js"></script>
+        <script src="/src/common/models/index.js"></script>
+        <script src="/src/common/models/network.js"></script>
+        <script src="/src/common/models/order.js"></script>
+        <script src="/src/common/models/orderbook.js"></script>
+        <script src="/src/common/models/portfolio.js"></script>
+        <script src="/src/common/models/prediction.js"></script>
+        <script src="/src/common/models/trade.js"></script>
+        <script src="/src/common/models/user.js"></script>
+        <script src="/src/common/services/config.js"></script>
+        <script src="/src/common/services/index.js"></script>
+        <script src="/src/common/services/lodash.js"></script>
+        <script src="/src/common/services/title.js"></script>
+        <script src="/src/common/services/utils.js"></script>
         <!--SCRIPTS END-->
         
         <!--CDNS-->
