--- a/.tmp/public/src/app/market/index.tpl.html
+++ b/.tmp/public/src/app/market/index.tpl.html
@@ -42,6 +42,10 @@
 		<div class="card">
 			<div style="padding:16px">
 				<h1>{{market}} Information</h1>
+				<!--GET ASSET FROM MARKET-->
+				<!--:p-->
+				<p>{{asset.description}}</p>
+				{{asset.information}}
 				<h5>{{vector.data.length}}</h5>
                 <cytoscape graph-ready="graphReady" graph-options="directedGraphOptions" graph-elements="directedGraphElements" graph-layout="directedGraphLayout" graph-style="directedGraphStyle"></cytoscape>
 			</div>
