--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -101,6 +101,7 @@
         <script src="/src/app/register/index.js"></script>
         <script src="/src/app/search/index.js"></script>
         <script src="/src/common/models/analysis.js"></script>
+        <script src="/src/common/models/asset.js"></script>
         <script src="/src/common/models/data.js"></script>
         <script src="/src/common/models/index.js"></script>
         <script src="/src/common/models/network.js"></script>
