--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -112,23 +112,22 @@
 
 <div ng-show="!currentUser">
 
-	<div class="intro" style="">
+	<div class="intro" style="margin-top:-50px">
 	    <div class="intro-container">
 	        <svg class="svg-defs" viewBox="0 0 1920 1080" viewPort="0 0 1920 1080" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg">
 	            <symbol id="intro-desktop-text">
-	                <text style="font-size:62px;font-family:Titillium Web,Helvetica,Arial,sans-serif;" text-anchor="middle" x="960" y="488" dy=".35em" class="medium-text">CRE8.CAPITAL</text> 
-	                <text style="font-size:22px;" text-anchor="middle" x="960" y="570" dy=".35em" class="medium-text">MULTIDIMENSIONAL CAPITAL PARTNERS</text> 
+	                <text class="headerText" style="font-size:62px;font-family:Titillium Web,Helvetica,Arial,sans-serif;" text-anchor="middle" x="960" y="488" dy=".35em" class="medium-text">CRE8.CAPITAL</text> 
+	                <text class="subheaderText" text-anchor="middle" x="960" y="550" dy=".35em" class="medium-text">MULTIDIMENSIONAL CAPITAL PARTNERS</text> 
 	            </symbol>  
 	            <div class="intro-shade"></div>  
 	        </svg> 
 	        <div class="box-with-text">
 	            <div class="text-fill">
-	                <video itemscope itemtype="VideoObject" class="video" src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" preload="auto"autoplay="autoplay" loop="loop" muted="muted"></video>
+	                <video itemscope itemtype="VideoObject" class="video" src="{{video}}" preload="auto"autoplay="autoplay" loop="loop" muted="muted"></video>
 	            </div>
 	            <svg class="svg-inverted-mask" viewBox="0 0 1920 1080" viewPort="0 0 1920 1080" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg">
 	                <rect width="100%" height="100%" mask="url(#intro-desktop-mask)" class="shape--fill"/>
 	                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#intro-desktop-text" class="text--transparent"></use>
-	                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#intro-desktop-novo" class="text--transparent"></use>
 	            </svg> 
 	        </div>
 	    </div>
@@ -142,6 +141,27 @@
        	<!--<p style="font-style:italic;color:gray">Always growing and learning, CRE8 consists of a companies and individuals spanning the globe.</p>-->
         <!--<p style="font-style:italic;color:gray">This network of intelligence spans the globe. A strong team.</p>-->
 	    <div class="spacing-50"></div>
+	    <div class="block">
+            <div class="shape">
+                <div class="cube outer">
+                    <div class="side left"></div>
+                    <div class="side right"></div>
+                    <div class="side top"></div>
+                    <div class="side bottom"></div>
+                    <div class="side front"></div>
+                    <div class="side back"></div>
+                    <div class="cube">
+                        <div class="side left"></div>
+                        <div class="side right"></div>
+                        <div class="side top"></div>
+                        <div class="side bottom"></div>
+                        <div class="side front"></div>
+                        <div class="side back"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+      	<div class="spacing-50"></div>
 	</div>
 	
 	<div class="container" id="about">
@@ -182,6 +202,7 @@
 
 			</div>
 			<div class="col-sm-6" style="text-align:right">
+				<!--
 				<div class="block">
                     <div class="shape">
                         <div class="cube outer">
@@ -202,6 +223,7 @@
                         </div>
                     </div>
                 </div>
+            	-->
 			</div>
 		</div>
 
