--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -4,7 +4,6 @@
 @import url('https://fonts.googleapis.com/css?family=Catamaran:300,400,600');
 @import url('https://fonts.googleapis.com/css?family=Barlow:300,400,600');
 
-
 html,body {
   height:100%;
   font-family:verdana,arial,sans-serif;
@@ -14,33 +13,22 @@ html,body {
   padding:0;
 }
 
-html {
-    height:100%;
-    box-sizing: border-box;
-}
+html {height:100%;box-sizing: border-box;}
 
-*, *:before, *:after {
-    box-sizing: inherit;
-}
+*, *:before, *:after {box-sizing: inherit;}
 
 body {
-    position: relative;
-    margin:0;
-    padding-bottom:200px;
-    min-height: 100%;
-    height: 100%;
-    overflow-x:hidden!important;
+  position: relative;
+  margin:0;
+  padding-bottom:200px;
+  min-height: 100%;
+  height: 100%;
+  overflow-x:hidden!important;
 }
 
-a {
-  text-decoration: none !important;
-  color:#222;
-}
+a {text-decoration: none !important;color:#222;}
 
-a:hover {
-  color: #2ab996 !important;
-  text-decoration:none;
-}
+a:hover {color: #2ab996 !important;text-decoration:none;}
 
 h1,h2,h3 {
   //font-family: 'Josefin Sans';
@@ -48,37 +36,21 @@ h1,h2,h3 {
   font-family: 'Barlow';
 }
 
-md-progress-linear .md-container {
-  background-color: rgba(36,36,46, 1)!important;
-}
+md-progress-linear .md-container {background-color: rgba(36,36,46, 1)!important;}
 
 md-progress-linear.md-default-theme .md-bar, md-progress-linear .md-bar {
  background-color: #14b794!important;
  //#14b794 // #12ab89 // 14b794
  //droid sans mono,monospace
 }
-input{
-  font-weight:bold;
-}
+input{font-weight:bold;}
+
 input::-webkit-input-placeholder {
   color: gray !important;
   font-weight:bold;
 }
- 
-input:-moz-placeholder { /* Firefox 18- */
-  color: gray !important;  
-  font-weight:bold;
-}
- 
-input::-moz-placeholder {  /* Firefox 19+ */
-  color: gray !important;  
-  font-weight:bold;
-}
- 
-input:-ms-input-placeholder {  
-  color: gray !important;  
-  font-weight:bold;
-}
+  
+input:-ms-input-placeholder {  color: gray !important;  font-weight:bold;}
 
 .card{
   box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
@@ -86,15 +58,7 @@ input:-ms-input-placeholder {
   margin:10px;
 }
 
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12{
-  //padding-left:0px;
-  //padding-right:0px;
-}
-
-
-
 .md-sidenav-backdrop {opacity: 0 !important;}
-
 .navbar-custom{background-color: #fff; text-align: left;}
 .navbar-custom .navbar-brand:focus{color:#424242}
 .navbar-custom .navbar-toggle {border-color: white;}
@@ -102,82 +66,81 @@ input:-ms-input-placeholder {
 .navbar-custom .navbar-toggle:hover .icon-bar{background-color:#000;}
 
 .navIcon{
-    position: relative;
-    float: right;
-    padding: 9px 10px;
-    margin-top: 5px;
-    //margin-right: 15px;
-    //margin-bottom: 8px;
-    background-color: transparent;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 4px;
+  position: relative;
+  float: right;
+  padding: 9px 10px;
+  margin-top: 5px;
+  //margin-right: 15px;
+  //margin-bottom: 8px;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
 
 .navIcon .icon-bar{
-    background-color: #424242;
-    display: block;
-    width: 22px;
-    height: 2px;
-    border-radius: 1px;
-    margin-top: 4px;
+  background-color: #424242;
+  display: block;
+  width: 22px;
+  height: 2px;
+  border-radius: 1px;
+  margin-top: 4px;
 }
-
 
 .navbar-inverse{background-color:#000}
 
 .imageContainer {
-    background:#33312d;
-    overflow:hidden;
-    min-height: 500px;
-    font-family: 'Titillium Web',sans-serif;
-    margin:0;padding:0;border:0 none;position: relative;
+  background:#33312d;
+  overflow:hidden;
+  min-height: 500px;
+  font-family: 'Titillium Web',sans-serif;
+  margin:0;padding:0;border:0 none;position: relative;
 }
 
 .imageContainerDiv {
-    width:100%;
-    height: 35em;
-    display: flex;
-    flex-direction: column;
+  width:100%;
+  height: 35em;
+  display: flex;
+  flex-direction: column;
 }
 
 .imageContainerDiv h1 {
-    color: rgba(255,255,255,0.9);
-    font-size: 50px;
-    font-weight: 400;
-    margin-top:auto;
-    margin-bottom:auto;
+  color: rgba(255,255,255,0.9);
+  font-size: 50px;
+  font-weight: 400;
+  margin-top:auto;
+  margin-bottom:auto;
 }
 
 .imageContainerSmall {
-    background:#252525;
-    overflow:hidden;
-    min-height: 200px;
-    font-family: 'Titillium Web',sans-serif;
-    margin:0;padding:0;border:0 none;position: relative;
+  background:#252525;
+  overflow:hidden;
+  min-height: 200px;
+  font-family: 'Titillium Web',sans-serif;
+  margin:0;padding:0;border:0 none;position: relative;
 }
 
 .imageContainerSmallDiv {
-    width:100%;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
+  width:100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
 }
 
 .imageContainerSmallDiv h1 {
-    color: rgba(255,255,255,0.9);
-    font-size: 50px;
-    font-weight: 400;
-    margin-top:auto;
-    margin-bottom:auto;
+  color: rgba(255,255,255,0.9);
+  font-size: 50px;
+  font-weight: 400;
+  margin-top:auto;
+  margin-bottom:auto;
 }
 
 .imageContainerSmallDivH1 {
-    color: rgba(255,255,255,0.9);
-    font-size: 50px;
-    font-weight: 400;
-    margin-top:auto;
-    margin-bottom:auto;
+  color: rgba(255,255,255,0.9);
+  font-size: 50px;
+  font-weight: 400;
+  margin-top:auto;
+  margin-bottom:auto;
 }
 
 .selfClear:after {
@@ -186,137 +149,139 @@ input:-ms-input-placeholder {
   display: table;
 }
 
-.social-log {
-    text-align: center;
-}
+.social-log {text-align: center;}
+
 .social-log a {
-    margin: 3px;
-    display: inline-block;
+  margin: 3px;
+  display: inline-block;
 }
+
 .social-log i {
-    color: #fff;
+  color: #fff;
 }
+
 .form-group {
-    position: relative;
-    margin-bottom: 15px;
+  position: relative;
+  margin-bottom: 15px;
 }
+
 .form-control {
-    width: 100%;
-    height: 50px;
-    font-size: 1em;
-    border: none;
-    padding: 5px 7px 5px 15px;
-    background: #fff;
-    color: #666;
-    border: 2px solid #ddd;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
+  width: 100%;
+  height: 50px;
+  font-size: 1em;
+  border: none;
+  padding: 5px 7px 5px 15px;
+  background: #fff;
+  color: #666;
+  border: 2px solid #ddd;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
 }
+
 .form-control:focus {
-    border-color: #002c54;
-    color: #002c54;
-    font-weight: bold;
+  border-color: #002c54;
+  color: #002c54;
+  font-weight: bold;
 }
+
 .form-group .fa {
-    position: absolute;
-    right: 15px;
-    top: 17px;
-    color: #14b794;
+  position: absolute;
+  right: 15px;
+  top: 17px;
+  color: #14b794;
 }
+
 .log-status.wrong-entry {
-    -moz-animation: wrong-log 0.3s;
-    -webkit-animation: wrong-log 0.3s;
-    animation: wrong-log 0.3s;
+  -moz-animation: wrong-log 0.3s;
+  -webkit-animation: wrong-log 0.3s;
+  animation: wrong-log 0.3s;
 }
+
 .log-status.wrong-entry .form-control, .wrong-entry .form-control+.fa {
-    border-color: #ed1c24;
-    color: #ed1c24;
+  border-color: #ed1c24;
+  color: #ed1c24;
 }
+
 .log-btn {
-    background-color: #002c54;
-    color: #fff!important;
-    width: 100%;
-    padding: 10px;
-    text-transform: uppercase;
-    font-size: 1em;
-    font-weight: 800;
-    letter-spacing: 1px;
-    border-radius: 0;
+  background-color: #002c54;
+  color: #fff!important;
+  width: 100%;
+  padding: 10px;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: 800;
+  letter-spacing: 1px;
+  border-radius: 0;
 }
+
 .log-btn:hover {
-    background: #001B34;
-    color: #fff!important;
+  background: #001B34;
+  color: #fff!important;
 }
+
 .log-btn:focus, .log-btn:active {
-    background-color: #001B34!important;
-    color: #fff!important;
-    -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,0.75);
-    box-shadow: inset 0 3px 5px rgba(0,0,0,0.75);
+  background-color: #001B34!important;
+  color: #fff!important;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,0.75);
+  box-shadow: inset 0 3px 5px rgba(0,0,0,0.75);
 }
+
 .link {
-    text-decoration: none;
-    color: #C6C6C6;
-    float: right;
-    font-size: 12px;
-    margin-bottom: 15px;
+  text-decoration: none;
+  color: #C6C6C6;
+  float: right;
+  font-size: 12px;
+  margin-bottom: 15px;
 }
+
 .link:hover {
-    text-decoration: underline;
-    color: #8C918F;
+  text-decoration: underline;
+  color: #8C918F;
 }
+
 .intro-header {
-    margin-bottom: 50px;
-    background: #EEEEEE;
+  margin-bottom: 50px;
+  background: #EEEEEE;
 }
+
 .intro-header .site-heading, .intro-header .post-heading, .intro-header .page-heading {
-    padding: 50px 0 50px;
-    color: #252525;
+  padding: 50px 0 50px;
+  color: #252525;
 }
 
 .flex {
-    display: flex;
-    flex-direction: row;
-    justify-items: center;
-    wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  wrap: wrap;
 }
 
 .member-tabs li{
-    display: inline;
-    font-size: 20px;
-    font-family:'Titillium Web',sans-serif;
+  display: inline;
+  font-size: 20px;
+  font-family:'Titillium Web',sans-serif;
 }
 
 .member-tabs > li > a{
-    padding:10px 15px;
-    color:rgb(125,125,125);
+  padding:10px 15px;
+  color:rgb(125,125,125);
 }
 
 .member-tabs > li > a:hover{
-    background-color: #eee;
-    border-radius:3px;
+  background-color: #eee;
+  border-radius:3px;
 }
 
-.member-tab-container ul{
-    margin:10px 15px;
-}
+.member-tab-container ul{margin:10px 15px;}
 
-.nav {
-  font-family:Barlow;
-  font-size:20px;
-}
+.nav {font-family:Barlow;font-size:20px;}
 
-.navbar-brand{
-  font-family:Barlow;font-size:20px;
-}
+.navbar-brand{font-family:Barlow;font-size:20px;}
 
-.active span {
-  color: #2AB996;
-}
+.active span {color: #2AB996;}
 
-.activeicon i {
-  color: #2AB996;
-}
+.activeicon i {color: #2AB996;}
 
 .column {
   height:100%;
@@ -324,9 +289,7 @@ input:-ms-input-placeholder {
   *zoom:1;
 }
 
-.column .padding {
-  padding:20px;
-}
+.column .padding {padding:20px;}
 
 .box {
   bottom:0;
@@ -337,9 +300,7 @@ input:-ms-input-placeholder {
   background-color:#000;
 }
 
-.divider {
-  margin-top:32px;
-}
+.divider {margin-top:32px;}
 
 #social {
   background-color:#000;
@@ -367,9 +328,7 @@ input:-ms-input-placeholder {
   color:#fff;
 }
 
-.label-default {
-  background-color:#ddd;
-}
+.label-default {background-color:#ddd;}
 
 .page-header {
   margin-top:55px;
@@ -386,14 +345,14 @@ input:-ms-input-placeholder {
 }
 
 .footer {
-    position: relative;
-    z-index: 50;
-    width: 100%;
-    height: auto;
-    padding: 1%;
-    color: gray;
-    font-size: 0.8em;
-    opacity: 0.8;
+  position: relative;
+  z-index: 50;
+  width: 100%;
+  height: auto;
+  padding: 1%;
+  color: gray;
+  font-size: 0.8em;
+  opacity: 0.8;
 }
 
 .spacing-5 {padding:5px;}
@@ -408,44 +367,48 @@ input:-ms-input-placeholder {
 .spacing-200 {padding:200px;}
 .spacing-250 {padding:250px;}
 
-@media (max-width: 1200px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-left, .navbar-right {
-        float: none !important;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-    }
-    .navbar-fixed-top {
-        top: 0;
-        border-width: 0 0 1px;
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin-top: 7.5px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in {
-        display: block !important;
-    }
-    #search-link{width:100%;}
-}
+.headerText{font-size:62px!important;}
+.subheaderText{font-size:22px!important;}
 
+@media (max-width: 1200px) {
+  .navbar-header {
+      float: none;
+  }
+  .navbar-left, .navbar-right {
+      float: none !important;
+  }
+  .navbar-toggle {
+      display: block;
+  }
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+  }
+  .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+      display: none!important;
+  }
+  .navbar-nav {
+      float: none!important;
+      margin-top: 7.5px;
+  }
+  .navbar-nav>li {
+      float: none;
+  }
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+  .collapse.in {
+      display: block !important;
+  }
+  #search-link{width:100%;}
+  .headerText{font-size:62px!important;}
+  .subheaderText{font-size:22px!important;}
+}
 
 @media only screen and (max-width: 1024px) {
   video {display:none}
@@ -453,32 +416,6 @@ input:-ms-input-placeholder {
     visibility:visible;
     height:100%
   }
+  .headerText{font-size:62px!important;}
+  .subheaderText{font-size:14px!important;}
 }
-
-@media only screen and (max-width: 920px) {
-  //.intro-container {zoom: 0.8}
-}
-@media only screen and (max-width: 850px) {
-  //.intro-container {zoom: 0.7}
-  //body{zoom: 1}
-}
-@media only screen and (max-width: 740px) {
-  //.intro-container {zoom: 0.6}
-  //body{zoom: 1}
-}
-@media only screen and (max-width: 640px) {
-  //.intro-container {zoom: 0.55}
-  //body{zoom: 1}
-}
-@media only screen and (max-width: 600px) {
-  //.intro-container {zoom: 0.5}
-  //body{zoom: 0.97}
-}
-@media only screen and (max-width: 555px) {
-  //.intro-container {zoom: 0.45}
-  //body{zoom: 0.94}
-}
-@media only screen and (max-width: 510px) {
-  //.intro-container {zoom: 0.4}
-  //body{zoom: 0.91}
-
