--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -13,4 +13,4 @@
 
 <div ng-include="'nav/index.tpl.html'"></div>
 
-<div class="" ui-view="main" style="width:100%;margin-top:50px;"></div>
+<div class="" ui-view="main" style="width:100%;margin-top:50px;overflow:hidden"></div>
